parse/tests/snapshots/parse_test__inputs@basic.ninja.snap
---
source: parse/tests/parse_test.rs
expression: ast
input_file: parse/tests/parse_inputs/basic.ninja
---
Description {
    builds: [
        Build {
            action: Command(
                "echo first",
            ),
            inputs: [],
            implicit_inputs: [],
            order_inputs: [],
            outputs: [
                [
                    102,
                    105,
                    114,
                    115,
                    116,
                ],
            ],
        },
        Build {
            action: Command(
                "echo second",
            ),
            inputs: [],
            implicit_inputs: [],
            order_inputs: [],
            outputs: [
                [
                    115,
                    101,
                    99,
                    111,
                    110,
                    100,
                ],
            ],
        },
        Build {
            action: Command(
                "gcc foo.c bar.c baz.c -o pasta",
            ),
            inputs: [
                [
                    102,
                    111,
                    111,
                    46,
                    99,
                ],
                [
                    98,
                    97,
                    114,
                    46,
                    99,
                ],
                [
                    98,
                    97,
                    122,
                    46,
                    99,
                ],
            ],
            implicit_inputs: [],
            order_inputs: [],
            outputs: [
                [
                    112,
                    97,
                    115,
                    116,
                    97,
                ],
            ],
        },
    ],
}
