parse/tests/snapshots/parse_test__inputs@var1.ninja.snap
---
source: parse/tests/parse_test.rs
expression: ast
input_file: parse/tests/parse_inputs/var1.ninja
---
Description {
    builds: [],
}
