parse/tests/snapshots/parse_test__inputs@var2.ninja.snap
---
source: parse/tests/parse_test.rs
expression: ast
input_file: parse/tests/inputs/var2.ninja
---
Description {
    rules: [
        Rule {
            name: [
                101,
                99,
                104,
                111,
            ],
            command: Expr(
                [
                    Reference(
                        [
                            98,
                            97,
                            114,
                        ],
                    ),
                    Literal(
                        [
                            32,
                            102,
                            111,
                            111,
                            32,
                        ],
                    ),
                    Reference(
                        [
                            97,
                            110,
                            111,
                            116,
                            104,
                            101,
                            114,
                        ],
                    ),
                    Literal(
                        [
                            32,
                            104,
                            101,
                            108,
                            108,
                            111,
                            32,
                            104,
                            101,
                            108,
                            108,
                            111,
                        ],
                    ),
                ],
            ),
        },
        Rule {
            name: [
                101,
                99,
                104,
                111,
                50,
            ],
            command: Expr(
                [
                    Reference(
                        [
                            98,
                            97,
                            114,
                        ],
                    ),
                    Literal(
                        [
                            32,
                        ],
                    ),
                    Literal(
                        [
                            102,
                            111,
                            111,
                        ],
                    ),
                    Literal(
                        [
                            36,
                        ],
                    ),
                    Literal(
                        [
                            123,
                            97,
                            110,
                            111,
                            116,
                            104,
                            101,
                            114,
                            125,
                            32,
                            104,
                            101,
                            108,
                            108,
                            111,
                        ],
                    ),
                ],
            ),
        },
    ],
    builds: [],
}
