parse/tests/snapshots/parse_test__inputs@var_in_path_1.ninja.snap
---
source: parse/tests/parse_test.rs
expression: ast
input_file: parse/tests/inputs/var_in_path_1.ninja
---
Description {
    bindings: RefCell {
        value: Env {
            parent: None,
            bindings: {},
        },
    },
    rules: [
        Rule {
            name: [
                101,
                99,
                104,
                111,
            ],
            bindings: {
                [
                    99,
                    111,
                    109,
                    109,
                    97,
                    110,
                    100,
                ]: Expr(
                    [
                        Literal(
                            [
                                101,
                                99,
                                104,
                                111,
                                32,
                            ],
                        ),
                        Reference(
                            [
                                111,
                                117,
                                116,
                            ],
                        ),
                    ],
                ),
            },
        },
    ],
    builds: [
        Build {
            rule: [
                101,
                99,
                104,
                111,
            ],
            inputs: [],
            outputs: [
                Expr(
                    [
                        Literal(
                            [
                                97,
                            ],
                        ),
                        Literal(
                            [
                                32,
                            ],
                        ),
                        Literal(
                            [
                                112,
                                97,
                                116,
                                104,
                            ],
                        ),
                        Literal(
                            [
                                32,
                            ],
                        ),
                        Literal(
                            [
                                119,
                                105,
                                116,
                                104,
                            ],
                        ),
                        Literal(
                            [
                                32,
                            ],
                        ),
                        Literal(
                            [
                                115,
                                112,
                                97,
                                99,
                                101,
                                115,
                            ],
                        ),
                    ],
                ),
                Expr(
                    [
                        Literal(
                            [
                                97,
                                110,
                                100,
                            ],
                        ),
                        Literal(
                            [
                                32,
                            ],
                        ),
                        Literal(
                            [
                                97,
                                110,
                                111,
                                116,
                                104,
                                101,
                                114,
                            ],
                        ),
                        Literal(
                            [
                                32,
                            ],
                        ),
                        Literal(
                            [
                                111,
                                110,
                                101,
                            ],
                        ),
                    ],
                ),
            ],
        },
        Build {
            rule: [
                101,
                99,
                104,
                111,
            ],
            inputs: [],
            outputs: [
                Expr(
                    [
                        Literal(
                            [
                                32,
                            ],
                        ),
                        Literal(
                            [
                                115,
                                116,
                                97,
                                114,
                                116,
                                115,
                                119,
                                105,
                                116,
                                104,
                                97,
                            ],
                        ),
                        Literal(
                            [
                                36,
                            ],
                        ),
                    ],
                ),
            ],
        },
    ],
}
