parse/tests/snapshots/parse_test__inputs@var_in_path_2.ninja.snap
---
source: parse/tests/parse_test.rs
expression: ast
input_file: parse/tests/parse_inputs/var_in_path_2.ninja
---
Description {
    builds: [
        Build {
            action: Command(
                "echo a:colon",
            ),
            inputs: [
                [
                    58,
                    105,
                    122,
                    101,
                ],
            ],
            implicit_inputs: [],
            order_inputs: [],
            outputs: [
                [
                    97,
                    58,
                    99,
                    111,
                    108,
                    111,
                    110,
                ],
            ],
        },
    ],
    defaults: None,
}
