parse/tests/snapshots/parse_test__inputs@whitespace_stripping.ninja.snap
---
source: parse/tests/parse_test.rs
expression: ast
input_file: parse/tests/parse_inputs/whitespace_stripping.ninja
---
Description {
    builds: [
        Build {
            action: Command(
                "foo bar",
            ),
            inputs: [],
            implicit_inputs: [],
            outputs: [
                [
                    120,
                ],
            ],
        },
        Build {
            action: Command(
                "foobar",
            ),
            inputs: [],
            implicit_inputs: [],
            outputs: [
                [
                    121,
                ],
            ],
        },
    ],
}
